update swagger for handler
