# docs/swagger.json
@@ -4,6 +4,67 @@
         "contact": {}
     },
     "paths": {
+        "/api/billers": {
+            "get": {
+                "description": "Show all biller_account.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Billers"
+                ],
+                "summary": "Show all biller_account.",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.BillAccount"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create new biller_account, it's for store.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Billers"
+                ],
+                "summary": "Create new biller_account.",
+                "parameters": [
+                    {
+                        "description": "JSON request body for payment request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.BillAccount"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.BillAccount"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/billpayment/lookup": {
             "post": {
                 "description": "Show inquiry response from inquiry request.",
@@ -24,7 +85,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/inquiry.InquiryRequest"
+                            "$ref": "#/definitions/model.InquiryRequest"
                         }
                     }
                 ],
@@ -34,7 +95,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/inquiry.InquiryResponse"
+                                "$ref": "#/definitions/model.InquiryResponse"
                             }
                         }
                     }
@@ -61,7 +122,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/payment.PaymentRequest"
+                            "$ref": "#/definitions/model.PaymentRequest"
                         }
                     }
                 ],
@@ -71,7 +132,166 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/payment.PaymentResponse"
+                                "$ref": "#/definitions/model.PaymentResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/bills": {
+            "get": {
+                "description": "show all bill in system.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bills"
+                ],
+                "summary": "Show all bill.",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Bill"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create new bill detail.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Bills"
+                ],
+                "summary": "Create new bill.",
+                "parameters": [
+                    {
+                        "description": "JSON request body for payment request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Bill"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Bill"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/customers": {
+            "get": {
+                "description": "Show all customer in system.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Show all customer.",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Customer"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create new customer that use bill.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Create new customer.",
+                "parameters": [
+                    {
+                        "description": "JSON request body for payment request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Customer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Customer"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/customers/:id": {
+            "get": {
+                "description": "Show all customer in system by.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customers"
+                ],
+                "summary": "Show all customer by ID.",
+                "parameters": [
+                    {
+                        "description": "JSON request body for payment request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Customer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Customer"
                             }
                         }
                     }
@@ -80,7 +300,82 @@
         }
     },
     "definitions": {
-        "inquiry.AdditionalFieldRequest": {
+        "model.Bill": {
+            "type": "object",
+            "properties": {
+                "billerId": {
+                    "type": "integer"
+                },
+                "channelCode": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "reference1": {
+                    "type": "integer"
+                },
+                "reference2": {
+                    "type": "integer"
+                },
+                "senderBankCode": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "tranAmount": {
+                    "type": "number"
+                },
+                "trasactionId": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.BillAccount": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "service_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Customer": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "firstName": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "mobileNumber": {
+                    "type": "string"
+                },
+                "titleName": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.InquiryAdditionalFieldRequest": {
             "type": "object",
             "properties": {
                 "billerFee": {
@@ -142,7 +437,7 @@
                 }
             }
         },
-        "inquiry.AdditionalFieldResponse": {
+        "model.InquiryAdditionalFieldResponse": {
             "type": "object",
             "properties": {
                 "dueDate": {
@@ -171,11 +466,11 @@
                 }
             }
         },
-        "inquiry.InquiryRequest": {
+        "model.InquiryRequest": {
             "type": "object",
             "properties": {
                 "additional": {
-                    "$ref": "#/definitions/inquiry.AdditionalFieldRequest"
+                    "$ref": "#/definitions/model.InquiryAdditionalFieldRequest"
                 },
                 "apiKey": {
                     "type": "string"
@@ -224,11 +519,11 @@
                 }
             }
         },
-        "inquiry.InquiryResponse": {
+        "model.InquiryResponse": {
             "type": "object",
             "properties": {
                 "additional": {
-                    "$ref": "#/definitions/inquiry.AdditionalFieldResponse"
+                    "$ref": "#/definitions/model.InquiryAdditionalFieldResponse"
                 },
                 "billerId": {
                     "type": "string"
@@ -286,7 +581,7 @@
                 }
             }
         },
-        "payment.AdditionalFieldRequest": {
+        "model.PaymentAdditionalFieldRequest": {
             "type": "object",
             "properties": {
                 "customerFee": {
@@ -360,7 +655,7 @@
                 }
             }
         },
-        "payment.AdditionalFieldResponse": {
+        "model.PaymentAdditionalFieldResponse": {
             "type": "object",
             "properties": {
                 "rsAppId": {
@@ -371,11 +666,11 @@
                 }
             }
         },
-        "payment.PaymentRequest": {
+        "model.PaymentRequest": {
             "type": "object",
             "properties": {
                 "additional": {
-                    "$ref": "#/definitions/payment.AdditionalFieldRequest"
+                    "$ref": "#/definitions/model.PaymentAdditionalFieldRequest"
                 },
                 "apiKey": {
                     "type": "string"
@@ -424,11 +719,11 @@
                 }
             }
         },
-        "payment.PaymentResponse": {
+        "model.PaymentResponse": {
             "type": "object",
             "properties": {
                 "additional": {
-                    "$ref": "#/definitions/payment.AdditionalFieldResponse"
+                    "$ref": "#/definitions/model.PaymentAdditionalFieldResponse"
                 },
                 "billerTransactionId": {
                     "type": "string"
