# handler/bill.go
@@ -14,6 +14,14 @@ import (
 
 var input model.Bill
 
+// @Summary 	Create new bill.
+// @Description Create new bill detail.
+// @Tags 		Bills
+// @Accept 		*/*
+// @Produce 	json
+// @Param body 	body model.Bill true "JSON request body for payment request"
+// @Success 	201 {array} model.Bill "Success"
+// @Router 		/api/bills [post]
 func HandlerCreateBill(c echo.Context) error {
 	var bill model.Bill
 	if err := c.Bind(&input); err != nil {
@@ -50,6 +58,13 @@ func HandlerCreateBill(c echo.Context) error {
 	return c.JSON(http.StatusOK, bill)
 }
 
+// @Summary 	Show all bill.
+// @Description show all bill in system.
+// @Tags 		Bills
+// @Accept 		*/*
+// @Produce 	json
+// @Success 	200 {array} model.Bill "Success"
+// @Router 		/api/bills [get]
 func HandlerGetAllBills(c echo.Context) error {
 	var bills []model.Bill
 	clientDB, err := db.InitDatabase()
