# model/store.go
@@ -1,7 +1,0 @@
-package model
-
-type Store struct {
-	ID 			int
-	AccountName string  `json:"account_name"`
-	ServiceName string  `json:"service_name"`
-}
